--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>INICIO</title>
 </head>
 <body>
     <h1><a href="cuadros.html">Ir al cuadro</a></h1>
     <h1><a href="juego.html">Ir al juego</a></h1>
+
+    <h1><img src="imagenes/savely.webp" alt="" width="50px"></h1>
     
 </body>
 </html>
